bitfield/tests/fail/same-range-bounds.stderr
error: Bitfield range bounds cannot be the same. A range is not needed
 --> tests/fail/same-range-bounds.rs:6:16
  |
6 |         b: u8, 7..=7,
  |                ^^^^^
